--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
-    "name": "node-typescript-eslint-prettier-jest_boilerplate",
+    "name": "calcolafacile.it-backend",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "./src/application/server.ts",
     "scripts": {
-        "test": "jest"
+        "dev:server": "nodemon --config nodemon.json src/application/server.ts",
+        "test": "jest --watch --setupFiles dotenv/config"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
         "@types/jest": "^27.0.2",
         "@types/node": "^16.11.0",
+        "@types/nodemailer": "^6.4.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
+        "dotenv": "^10.0.0",
         "eslint": "^8.0.1",
         "eslint-config-prettier": "^8.3.0",
+        "helmet": "^4.6.0",
         "jest": "^27.2.5",
+        "nodemon": "^2.0.13",
         "ts-jest": "^27.0.6",
+        "ts-node": "^10.3.0",
         "typescript": "^4.4.4"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "express-validator": "^6.13.0",
+        "nodemailer": "^6.7.0"
     }
 }
