--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "calcolafacile.it-backend",
+    "type": "module",
     "version": "1.0.0",
     "description": "",
     "main": "./src/application/server.ts",
