--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
     "name": "calcolafacile.it-backend",
-    "type": "module",
     "version": "1.0.0",
     "description": "",
     "main": "./src/application/server.ts",
     "scripts": {
-        "start": "node src/application/server.ts",
+        "start": "tsc && node dist/server.js",
         "dev:server": "nodemon --config nodemon.json src/application/server.ts",
         "test": "jest --watch --setupFiles dotenv/config"
     },
