--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "./src/application/server.ts",
     "scripts": {
-        "start": "ts-node src/application/server.ts",
+        "start": "node dist/application/server.js",
+        "postinstall": "tsc",
         "dev:server": "nodemon --config nodemon.json src/application/server.ts",
         "test": "jest --watch --setupFiles dotenv/config"
     },
